Building up gpu code
Adding the memory management necessary and made a volumetric rendering backpropagation kernel

--- a/ScratchNerf/AcceleratedUtils/AcceleratedUtils.vcxproj
+++ b/ScratchNerf/AcceleratedUtils/AcceleratedUtils.vcxproj
@@ -120,10 +120,12 @@
     <None Include="accelerated_functions.cu" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AcceleratedAdamOptimizer.h" />
     <ClInclude Include="AcceleratedMipNeRF.h" />
     <ClInclude Include="AcceleratedMLP.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AcceleratedAdamOptimizer.cpp" />
     <ClCompile Include="AcceleratedMipNeRF.cpp" />
     <ClCompile Include="AcceleratedMLP.cpp" />
   </ItemGroup>
