--- a/ScratchNerf/AcceleratedUtils/AcceleratedUtils.vcxproj.filters
+++ b/ScratchNerf/AcceleratedUtils/AcceleratedUtils.vcxproj.filters
@@ -6,9 +6,11 @@
   <ItemGroup>
     <ClInclude Include="AcceleratedMipNeRF.h" />
     <ClInclude Include="AcceleratedMLP.h" />
+    <ClInclude Include="AcceleratedAdamOptimizer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AcceleratedMipNeRF.cpp" />
     <ClCompile Include="AcceleratedMLP.cpp" />
+    <ClCompile Include="AcceleratedAdamOptimizer.cpp" />
   </ItemGroup>
 </Project>
