--- a/ScratchNerf/ScratchNerf/ScratchNerf.csproj
+++ b/ScratchNerf/ScratchNerf/ScratchNerf.csproj
@@ -7,6 +7,11 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AcceleratedNeRFUtils\AcceleratedNeRFUtils.vcxproj" />
+  </ItemGroup>
 
 </Project>
