--- a/ScratchNerf/AcceleratedNeRFUtils/AcceleratedNeRFUtils.vcxproj.filters
+++ b/ScratchNerf/AcceleratedNeRFUtils/AcceleratedNeRFUtils.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClInclude Include="helpers.h" />
     <ClInclude Include="AcceleratedMipNeRF.h" />
     <ClInclude Include="AcceleratedGradientCalculator.h" />
+    <ClInclude Include="OutputRetriever.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AcceleratedAdamOptimizer.cpp" />
@@ -13,6 +14,7 @@
     <ClCompile Include="helpers.cpp" />
     <ClCompile Include="AcceleratedMipNeRF.cpp" />
     <ClCompile Include="AcceleratedGradientCalculator.cpp" />
+    <ClCompile Include="OutputRetriever.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="accelerated_functions.cu" />
